--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "sideEffects": false,
   "license": "MIT",
   "dependencies": {
-    "@codemirror/highlight": "^0.19.0",
+    "@lezer/highlight": "^0.15.0",
     "@codemirror/language": "^0.19.0",
     "@lezer/lr": "^0.15.0"
   },
