--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "author": {
     "name": "Marijn Haverbeke",
-    "email": "marijnh@gmail.com",
+    "email": "marijn@haverbeke.berlin",
     "url": "http://marijnhaverbeke.nl"
   },
   "type": "module",
