--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@lezer/highlight": "^1.0.0",
     "@codemirror/language": "^6.0.0",
+    "@lezer/common": "^1.2.0",
     "@lezer/lr": "^1.0.0"
   },
   "devDependencies": {
